# courses

./: index.html
.github/workflows/: static.yml
data-engineering/: architectural-blueprints.html  course-structure.md  index.html
data-engineering-lab/: Dockerfile.connect  README.md  docker-compose.yaml  lab-structure.md  pyproject.toml
data-engineering-lab/ingestion/app/: bronze_ingestion.py  config.py
data-engineering-lab/simulator/: run_simulation.py
data-engineering-lab/simulator/app/: main.py
data-engineering-lab/simulator/app/api/: banking_routes.py  customer_routes.py
data-engineering-lab/simulator/app/core/: config.py  database.py  exceptions.py
data-engineering-lab/simulator/app/models/: db_models.py
data-engineering-lab/simulator/app/producers/: base.py  kafka_producer.py
data-engineering-lab/simulator/app/services/: banking_service.py  customer_service.py
data-engineering/css/: styles.css
data-engineering/modules/: module1.html  module2.html  module3.html  module4.html  module5.html  module6.html
