[project]
name = "data-engineering-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.13.0",
    "asyncpg>=0.31.0",
    "delta-spark>=4.1.0",
    "faker>=40.15.0",
    "fastapi>=0.136.0",
    "googleapis-common-protos>=1.75.0",
    "greenlet>=3.4.0",
    "grpcio>=1.80.0",
    "grpcio-status>=1.80.0",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pydantic-settings>=2.13.1",
    "pyspark>=4.1.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "zstandard>=0.25.0",
]
